[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pullama-cli"
version = "1.0.0"
description = "Fix ollama pull TLS timeout and disconnects — resumable Ollama model downloader for slow connections"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [
    "ollama",
    "ollama-pull",
    "ollama-pull-alternative",
    "llm",
    "model",
    "download",
    "resume",
    "slow-internet",
    "tls-timeout",
    "tls-handshake-timeout",
    "offline",
    "ai",
    "ollama-offline",
    "ollama-download-manager",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
pullama = "pullama.__main__:main"

[project.urls]
Homepage = "https://github.com/Steve-sy/pullama"
Issues = "https://github.com/Steve-sy/pullama/issues"
